// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkListItemImage should render correctly 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "height": 16,
        "width": 24,
      },
    ]
  }
/>
`;

exports[`iOS BpkListItemImage should render correctly with a custom style 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "height": 16,
        "width": 24,
      },
      Object {
        "borderRadius": 10,
      },
    ]
  }
/>
`;

exports[`iOS BpkListItemImage should render correctly with a custom width 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "height": 28,
        "width": 42,
      },
    ]
  }
/>
`;

exports[`iOS BpkListItemImage should render correctly with an image 1`] = `
<Image
  resizeMode="contain"
  style={
    Array [
      undefined,
      Object {
        "height": 16,
        "width": 24,
      },
    ]
  }
/>
`;
